test/results/repeat-err.owltest.stderr
error: unexpected token 'x'

  x, x x
       ~

